syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Orders.Protos";

package orders;

service OrderService {
  
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  
}

// Remember the snake_case field names for cross-language compatibility

message PlaceOrderRequest {
  string crust_id = 1;
  repeated string topping_ids = 2;
}

message PlaceOrderResponse {
  google.protobuf.Timestamp due_by = 1;
}